--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.jboss.examples.ticketmonster</groupId>
@@ -66,6 +65,9 @@
         <!-- maven-compiler-plugin -->
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
+        
+        
+         <version.jboss.bom.wfk>2.7.0-redhat-1</version.jboss.bom.wfk> <!--  adding for testing -->
     </properties>
 
 
@@ -93,7 +95,26 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-        </dependencies>
+   
+   <!--    commenting out because adding     org.jboss.bom.wfk below for testing -->
+            <dependency>
+	            <groupId>org.jboss.bom.eap</groupId>
+	            <artifactId>jboss-javaee-6.0-with-resteasy</artifactId>
+	            <version>${version.jboss.bom.eap}</version>
+	            <type>pom</type>
+	            <scope>import</scope>
+             </dependency>
+
+       <!--  not working yet
+        <dependency>
+            <groupId>org.jboss.bom.wfk</groupId>
+            <artifactId>jboss-javaee-6.0-with-resteasy</artifactId>
+            <version>${version.jboss.bom.wfk}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        -->
+      </dependencies>
     </dependencyManagement>
 
     <dependencies>
@@ -204,6 +225,26 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- RESTEasy dependencies that bring in Jackson Core and RESTEasy APIs+SPIs, which we use for
+            fine tuning the content of the JSON responses -->
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        
+       <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-depchain</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
 
     <build>
